work on Wordle
Refactored RandomWord and WordCheck.
Made additional progress on the main file: Wordle.